<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aktivnosti.DodajPitanjeAkt"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etNaziv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/naziv_pitanja_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/odgovori_name"
                android:textAlignment="center"
                android:textColor="@color/zelena"
                android:layout_marginTop="10dp"/>

            <ListView
                android:id="@+id/lvOdgovori"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/etOdgovor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/odgovor_name"
                android:inputType="textPersonName"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnDodajOdgovor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dodaj_name"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/plava"
                android:background="@color/dirtyWhite"
                android:textAllCaps="false"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btnDodajTacan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dodaj_tacan_name"
                android:textAllCaps="false"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/zelena"
                android:background="@color/dirtyWhite"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btnDodajPitanje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:height="50dp"
                android:background="@color/plava"
                android:text="@string/spasi_pitanje_name"
                android:textAllCaps="false"
                android:textColor="@color/dirtyWhite"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>