<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aktivnosti.DodajKategorijuAkt"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <EditText
        android:id="@+id/etNaziv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Naziv Kategorije"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etIkona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/ikona_name" />

        <Button
            android:id="@+id/btnDodajIkonu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dodaj_ikonu_name" />
    </LinearLayout>

    <Button
        android:id="@+id/btnDodajKategoriju"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spasi_kategoriju_name"
        android:layout_marginTop="10dp"
        />

</LinearLayout>