<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aktivnosti.DodajKvizAkt"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/btnImportKviz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Import kviz"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/plava"
                    android:textColor="@color/dirtyWhite"/>

                <ba.unsa.etf.rma.DodatneImplementacije.KategorijeSpinner
                    android:id="@+id/spKategorije"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2" />

            </LinearLayout>

            <EditText
                android:id="@+id/etNaziv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/naziv_kviza_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/pitanja_u_kvizu_name"
                android:textAlignment="center"
                android:textColor="@color/zelena" />

            <ListView
                android:id="@+id/lvDodanaPitanja"
                android:layout_width="match_parent"
                android:layout_height="120dp">

            </ListView>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/moguca_pitanja_name"
                android:textAlignment="center"
                android:textColor="@color/darkYellow" />

            <ListView
                android:id="@+id/lvMogucaPitanja"
                android:layout_width="match_parent"
                android:layout_height="120dp" />

            <Button
                android:id="@+id/btnDodajKviz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:background="@color/dirtyWhite"
                android:text="@string/spasi_kviz_name"
                android:textAllCaps="false"
                android:textColor="@color/plava"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>